# upgrade-assurance-cli

./: .gitignore  CHANGELOG.md  README.md  check_config.yaml  pyproject.toml  run.py
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
tests/: fixtures.py  integration.py  test_report.py
tests/integration/: integration.py
tests/test_data/: readiness_1.1.1.1_1773792093.json
tests/unit/: fixtures.py  test_report.py
upgrade_assurance_cli/: __init__.py
upgrade_assurance_cli/cli/: capacity.py  exporter.py  main.py  report.py  runner.py  utils.py
upgrade_assurance_cli/tests/: fixtures.py  integration.py  test_report.py
