[tool.poetry]
name = "upgrade-assurance-cli"
version = "0.1.0"
description = ""
authors = ["Adam Baumeister <abaumeister@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
panos-upgrade-assurance = "^2.0.1"
typer = "^0.24.1"
pyyaml = "^6.0.3"
setuptools = "^82.0.1"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
