[tool.poetry]
name = "upgrade-assurance-cli"
version = "1.0.0"
description = "Upgrade Assurance CLI Tool"
authors = ["Adam Baumeister <abaumeister@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
panos-upgrade-assurance = "^2.0.1"
typer = "^0.24.1"
pyyaml = "^6.0.3"
setuptools = "^82.0.1"
pydantic = "^2.12.5"
requests = "^2.33.0"

[tool.semantic_release]
# Specifies where PSR should read and write the version number
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "python -m build --sdist --wheel ."

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.2"
typer = {extras = ["utils"], version = "^0.24.1"}
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
assurance-cli = 'upgrade_assurance_cli.cli.main:app'